This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2021-12-11:

- Fixed two more crashing bugs that occurred if ksh received a signal (such
  as SIGINT due to Ctrl+C) while the user is entering a multi-line command
  substitution in an interactive shell.

2021-12-09:

- Increased the general robustness of discipline function handling, fixing
  crashing bugs with PS2.get() and .sh.tilde.get() disciplines, among others.

- Fixed a crash that occurred on the interactive shell if the PS1 prompt
  contains multiple command substitutions and the user interrupts input
  while the shell is on a PS2 prompt waiting for the user to complete a
  command substitution of the form $( ... ).

2021-12-08:

- Fixed: if a function returned with a status > 256 using the 'return' command
  and the return value corresponded to a value that could have resulted from a
  signal, and an EXIT trap was active, then the shell mistakenly issued that
  signal to itself. Depending on the signal, this could cause the shell to
  terminate ungracefully, e.g. 'return 267' caused SIGSEGV ("memory fault").

- For the 'return' built-in command, you can now freely specify any
  return value that fits in a signed integer, typically a 32-bit value.
  Note that $? is truncated to 8 bits when the current (sub)shell exits.

- The head and tail builtins now correctly handle files that do not have an
  ending newline. (Note that the tail builtin is not compiled in by default.)

2021-12-05:

- Fixed an issue on illumos that caused some parameters in the getconf
  builtin to fail.

- The cd built-in command now supports a -e option (as specified in
  https://www.austingroupbugs.net/view.php?id=253). Passing -e alongside -P
  is used to guarantee the cd built-in returns with exit status 1 if the
  current working directory couldn't be determined after successfully changing