@@ -138,6 +138,7 @@ extern const char e_lexsyntax3[];
 extern const char e_lexsyntax4[];
 extern const char e_lexsyntax5[];
 extern const char e_lexwarnvar[];
+extern const char e_lexarithwarn[];
 extern const char e_lexobsolete1[];
 extern const char e_lexobsolete2[];
 extern const char e_lexobsolete3[];
